Implement custom notebook handling, webview integration, and command registration for Python Koans

--- a/package.json
+++ b/package.json
@@ -19,16 +19,79 @@
     "main": "./out/extension/extension.js",
     "browser": "./out/extension/extension.web.js",
     "contributes": {
-        "notebookRenderer": [
+        "commands": [
             {
-                "id": "python-koans",
-                "entrypoint": "./out/client/index.js",
-                "displayName": "Python Koans",
-                "mimeTypes": [
-                    "x-application/custom-json-output"
-                ]
+                "command": "python-koans.debugNotebook",
+                "title": "Debug Active Koan Notebook",
+                "category": "Python Koans"
+            },
+            {
+                "command": "python-koans.verifyChallenge",
+                "title": "Verify Current Challenge",
+                "category": "Python Koans"
+            },
+            {
+                "command": "python-koans.showView",
+                "title": "Show View",
+                "category": "Python Koans"
             }
         ],
+        "menus": {
+            "notebook/toolbar": [
+                {
+                    "command": "python-koans.verifyChallenge",
+                    "when": "notebookType == 'python-koans'"
+                }
+            ]
+        },
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "my-view-container-activity-bar",
+                    "title": "My View-Container Activity-Bar",
+                    "icon": "$(gear)"
+                }
+            ],
+            "panel": [
+                {
+                    "id": "my-view-container-panel",
+                    "title": "My View-Container Panel",
+                    "icon": "$(extensions-star-empty)"
+                }
+            ]
+        },
+        "views": {
+            "explorer": [
+                {
+                    "id": "pythonKoansView",
+                    "type": "webview",
+                    "name": "Python Koans Web-View 1",
+                    "contextualTitle": "Koan View 1",
+                    "icon": "$(snake)",
+                    "when": "resourceExtname == .koan-web"
+                }
+            ],
+            "my-view-container-activity-bar": [
+                {
+                    "id": "pythonKoansView2",
+                    "type": "webview",
+                    "name": "Python Koans Web-View 2",
+                    "contextualTitle": "Koan View 2",
+                    "icon": "$(bug)",
+                    "when": "resourceExtname == .koan-web"
+                }
+            ],
+            "my-view-container-panel": [
+                {
+                    "id": "pythonKoansView3",
+                    "type": "webview",
+                    "name": "Python Koans Web-View 3",
+                    "contextualTitle": "Koan View 3",
+                    "icon": "$(lightbulb)",
+                    "when": "resourceExtname == .koan-web"
+                }
+            ]
+        },
         "notebooks": [
             {
                 "type": "python-koans",
@@ -43,26 +106,16 @@
                 ]
             }
         ],
-        "commands": [
+        "notebookRenderer": [
             {
-                "command": "python-koans.debugNotebook",
-                "title": "Debug Active Koan Notebook",
-                "category": "Python Koans"
-            },
-            {
-                "command": "python-koans.verifyChallenge",
-                "title": "Verify Current Challenge",
-                "category": "Python Koans"
+                "id": "python-koans",
+                "entrypoint": "./out/client/index.js",
+                "displayName": "Python Koans",
+                "mimeTypes": [
+                    "x-application/custom-json-output"
+                ]
             }
-        ],
-        "menus": {
-            "notebook/toolbar": [
-                {
-                    "command": "python-koans.verifyChallenge",
-                    "when": "notebookType == 'python-koans'"
-                }
-            ]
-        }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
