--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
+				"--profile-temp",
 				"--extensionDevelopmentPath=${workspaceFolder}",
 				"${workspaceFolder}/example"
 			],
@@ -25,6 +26,7 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
+				"--profile-temp",
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
 			"outFiles": [
