Refactor koan editor and notebook structure
- Renamed and updated file patterns for koan and notebook samples.
- Added a new `proxy.koan` sample.
- Improved the custom editor UI with new CSS and enhanced JS logic for challenge.
- Refactored notebook related code into a dedicated directory.
- Added a new koans data model.
- Updated `package.json` to reflect new file patterns and selectors.

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
                     "type": "webview",
                     "name": "Koan View",
                     "icon": "$(snake)",
-                    "when": "resourceExtname == .koan-web"
+                    "when": "resourceExtname == .koan"
                 }
             ]
         },
@@ -70,7 +70,7 @@
                 "displayName": "Koan Editor",
                 "selector": [
                     {
-                        "filenamePattern": "*.koan-web"
+                        "filenamePattern": "*.koan"
                     }
                 ]
             }
@@ -81,10 +81,7 @@
                 "displayName": "Python Koans Notebook",
                 "selector": [
                     {
-                        "filenamePattern": "*.koan"
-                    },
-                    {
-                        "filenamePattern": "*.koan.ipynb"
+                        "filenamePattern": "*.koan-nb"
                     }
                 ]
             }
