--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         },
         "customEditors": [
             {
-                "viewType": "python-koans.koanEditor",
+                "viewType": "python-koans.editor",
                 "displayName": "Koan Editor",
                 "selector": [
                     {
