Refactor messaging to shared module and update imports
- Moved messaging logic from extension and `webview` to a new shared module.
- Updated imports and `tsconfig` paths accordingly.
- Added `path-browserify` as a dev dependency.
- Cleaned up `webview` messaging file and adjusted related build configuration.

--- a/package.json
+++ b/package.json
@@ -108,23 +108,24 @@
     "devDependencies": {
         "@types/mocha": "^10.0.10",
         "@types/node": "22.x",
+        "@types/vscode": "^1.104.0",
+        "@types/vscode-notebook-renderer": "^1.72.4",
         "@types/webpack-env": "^1.18.8",
         "@typescript-eslint/eslint-plugin": "^8.42.0",
         "@typescript-eslint/parser": "^8.42.0",
-        "@types/vscode-notebook-renderer": "^1.72.4",
-        "@types/vscode": "^1.104.0",
+        "@vscode/test-cli": "^0.0.11",
+        "@vscode/test-electron": "^2.5.2",
         "css-loader": "^7.1.2",
         "eslint": "^9.34.0",
         "fork-ts-checker-webpack-plugin": "^9.1.0",
         "glob": "^11.0.3",
         "mocha": "^11.7.2",
+        "path-browserify": "^1.0.1",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.4",
         "typescript": "^5.9.2",
-        "vscode-notebook-error-overlay": "^1.1.0",
-        "@vscode/test-cli": "^0.0.11",
-        "@vscode/test-electron": "^2.5.2",
         "util": "^0.12.5",
+        "vscode-notebook-error-overlay": "^1.1.0",
         "webpack": "^5.101.3",
         "webpack-cli": "^6.0.1"
     }
