--- a/src/extension/tsconfig.json
+++ b/src/extension/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "../tsconfig-base.json",
-  "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "../../out/extension",
-  },
-  "references": []
+    "extends": "../tsconfig-base.json",
+    "compilerOptions": {
+        "rootDir": ".",
+        "outDir": "../../out/extension",
+    },
+    "references": [
+        {
+            "path": "../shared"
+        }
+    ],
+    "include": [
+        "**/*"
+    ]
 }
