Refactor client structure for editor and notebook views
- Moved webview related files into `src/client/editor` to better separate sandboxed web view roots.
- Moved notebook related files into `src/client/notebook` to better separate sandboxed web view roots.
- Updated import paths, TypeScript configs, and webpack configuration to reflect the new structure.
- Cleaned up `shared/index.ts` and adjusted extension model to use the new output paths.

--- a/src/client/editor/tsconfig.json
+++ b/src/client/editor/tsconfig.json
@@ -12,13 +12,13 @@
         "rootDir": ".",
         "paths": {
             "../shared/*": [
-                "../shared/*"
+                "../../shared/*"
             ]
         }
     },
     "references": [
         {
-            "path": "../shared"
+            "path": "../../shared"
         }
     ],
     "include": [
