--- a/src/client/notebook/tsconfig.json
+++ b/src/client/notebook/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig-base.json",
+  "extends": "../../tsconfig-base.json",
   "compilerOptions": {
     // noEmit prevents the default tsc from building this--we use webpack instead
     "noEmit": true,
