--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./src/client"
-    },
-    {
-      "path": "./src/test"
-    },
-    {
-      "path": "./src/extension"
-    },
-    {
-      "path": "./src/webview"
-    },
-    {
-      "path": "./src/shared"
-    }
-  ]
+    "files": [],
+    "references": [
+        {
+            "path": "./src/extension"
+        },
+        {
+            "path": "./src/shared"
+        },
+        {
+            "path": "./src/client/editor"
+        },
+        {
+            "path": "./src/client/notebook"
+        },
+        {
+            "path": "./src/test"
+        }
+    ]
 }
