Refactor Python integration and manifest handling
- Replaces the koan data model with a Manifest class for exercise, test, and solution file paths. .
- Updates the webview/editor to handle new message formats and test result parsing.
- Updates the shared messaging protocol and adds a markup utility for HTML escaping.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,36 @@
 			],
 			"debugWebviews": true,
 			"preLaunchTask": "npm: watch"
+		},
+		{
+			"name": "Koan: Test-Identity",
+			"type": "debugpy",
+			"request": "launch",
+			"module": "koans.testing",
+			"console": "integratedTerminal",
+			"cwd": "${workspaceFolder}\\example\\files\\C01",
+			"env": {
+				"PYTHONPATH": "${workspaceFolder}\\example\\files\\C01"
+			},
+			"args": [
+				"identity",
+				"exercise_test.Testing.test_challenge_01"
+			]
+		},
+		{
+			"name": "Koan: Test-Launcher",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "exercise_test.py",
+			"console": "integratedTerminal",
+			"cwd": "${workspaceFolder}\\example\\files\\C01",
+			"env": {
+				"PYTHONPATH": "${workspaceFolder}\\example\\files\\C01"
+			},
+			"args": [
+				"${workspaceFolder}\\example\\files\\C01\\exercise.py",
+				"exercise_test.Testing.test_challenge_01"
+			]
 		}
 	]
 }
