--- a/src/client/editor/tsconfig.json
+++ b/src/client/editor/tsconfig.json
@@ -6,6 +6,7 @@
         "esModuleInterop": true,
         "lib": [
             "DOM",
+            "DOM.Iterable",
             "ES2020"
         ],
         "sourceMap": true,
