Integrate Monaco editor into challenge editor UI
- Adds Monaco Editor for code editing in the challenge UI.
- Replacing the `textarea` with a Monaco instance.
- Updates the build process and dependencies to include `monaco-editor` and `monaco-editor-webpack-plugin`.
- Adjusts webpack config, and updates the webview to load Monaco assets.
- Updates styles and event handling to support the new editor.

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "fork-ts-checker-webpack-plugin": "^9.1.0",
         "glob": "^11.0.3",
         "mocha": "^11.7.2",
+        "monaco-editor-webpack-plugin": "^7.1.0",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.4",
         "typescript": "^5.9.2",
@@ -127,5 +128,8 @@
         "vscode-notebook-error-overlay": "^1.1.0",
         "webpack": "^5.101.3",
         "webpack-cli": "^6.0.1"
+    },
+    "dependencies": {
+        "monaco-editor": "^0.53.0"
     }
 }
