--- a/src/client/editor/tsconfig.json
+++ b/src/client/editor/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "ES2020",
+        "moduleResolution": "node",
         "strict": true,
         "esModuleInterop": true,
         "lib": [
@@ -9,6 +10,7 @@
             "DOM.Iterable",
             "ES2020"
         ],
+        "types": ["monaco-editor"],
         "sourceMap": true,
         "rootDir": ".",
         "paths": {
