--- a/src/client/editor/tsconfig.json
+++ b/src/client/editor/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "ES2020",
-        "moduleResolution": "node",
         "strict": true,
+        "target": "ES2022",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "esModuleInterop": true,
         "lib": [
             "DOM",
             "DOM.Iterable",
-            "ES2020"
+            "ES2022"
         ],
         "types": ["monaco-editor"],
         "sourceMap": true,
