--- a/src/client/editor/tsconfig.json
+++ b/src/client/editor/tsconfig.json
@@ -1,23 +1,23 @@
 {
+    "extends": "../../tsconfig-base.json",
     "compilerOptions": {
-        "strict": true,
-        "target": "ES2022",
-        "module": "ES2022",
-        "moduleResolution": "bundler",
+        "noEmit": true,
         "esModuleInterop": true,
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ES2022"
-        ],
-        "types": ["monaco-editor"],
-        "sourceMap": true,
+        "target": "ES2022",
+        "module": "esnext",
+        "moduleResolution": "bundler",
         "rootDir": ".",
         "paths": {
             "../shared/*": [
                 "../../shared/*"
             ]
-        }
+        },
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "ES2022"
+        ],
+        "types": ["monaco-editor"]
     },
     "references": [
         {
